--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,18 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.dimhat.coolweather"
+        jackOptions.enabled=true
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
